fix: added text-align on form-check

--- a/src/assets/css/components/modals-components/create-workout-modal/create-workout-modal.css
+++ b/src/assets/css/components/modals-components/create-workout-modal/create-workout-modal.css
@@ -30,6 +30,10 @@
     justify-content: space-between;
 }
 
+.form-check {
+    text-align: center;
+}
+
 .input-group {
     flex-direction: column;
     width: auto !important;
